--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.hjq:titlebar:5.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.contrarywind:Android-PickerView:4.1.7'
+
 }
