--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.7'
     implementation 'org.aspectj:aspectjrt:1.8.9'
-    implementation 'com.yuyh.imgsel:library:2.0.6'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'jp.wasabeef:glide-transformations:2.0.0'
+    implementation 'com.yuyh.imgsel:library:2.0.6'//图片选择器
+    implementation 'com.github.bumptech.glide:glide:4.8.0'//图片
+    implementation 'jp.wasabeef:glide-transformations:4.0.1'//图片
+    implementation 'com.youth.banner:banner:1.4.10'
 
 }
