--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'//图片
     implementation 'jp.wasabeef:glide-transformations:4.0.1'//图片
     implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'top.zibin:Luban:1.1.8' //鲁班
 
 }
