--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+
+
+
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.hjq:titlebar:5.0'
@@ -44,5 +47,8 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.0.1'//图片
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'top.zibin:Luban:1.1.8' //鲁班
+    //刷新
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-21'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 
 }
