--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-*.iml
-.gradle
+# Gradle files
+/.gradle/
+/build/
+
+# IntelliJ
+/*.iml
+/.idea/
+
+# Local configuration file (sdk path, etc)
 /local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+*.iml
