--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.winhex.wys.wys">
-
     <!-- 相机权限 -->
-    <uses-permission android:name="android.permission.CAMERA" />
-    <!-- 写入SD卡的权限：如果你希望保存相机拍照后的照片 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- 读取SD卡的权限:打开相册选取图片所必须的权限 -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- 写入SD卡的权限：如果你希望保存相机拍照后的照片 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 读取SD卡的权限:打开相册选取图片所必须的权限 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
- 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:launchMode="singleTop"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/CommonAppTheme">
+        android:theme="@style/CommonAppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".datails.Datails"></activity>
         <activity android:name=".LoginSystemActivity.APPstar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,11 +29,10 @@
         <activity android:name=".LoginSystemActivity.Login" />
         <activity android:name=".LoginSystemActivity.UserData" />
         <activity android:name=".LoginSystemActivity.Register" />
-
         <activity
             android:name=".Activity.Release.Publish"
             android:label="@string/title_activity_publish"
-            android:theme="@style/CommonAppTheme"></activity>
+            android:theme="@style/CommonAppTheme" />
     </application>
 
 </manifest>
