--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 
-
+    //phtoview
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
