--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,22 +4,13 @@
     package="com.winhex.wys.wys">
     <!-- 相机权限 -->
     <uses-permission android:name="android.permission.CAMERA" /> <!-- 写入SD卡的权限：如果你希望保存相机拍照后的照片 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-
-
-    <!--地图包、搜索包需要的基础权限-->
-    <!--允许程序打开网络套接字-->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!--允许程序设置内置sd卡的写权限-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--允许程序获取网络状态-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!--允许程序访问WiFi网络信息-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!--允许程序读写手机状态和身份-->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 地图包、搜索包需要的基础权限 -->
+    <!-- 允许程序打开网络套接字 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 允许程序设置内置sd卡的写权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 允许程序获取网络状态 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 允许程序访问WiFi网络信息 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 允许程序读写手机状态和身份 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- 允许程序访问CellID或WiFi热点来获取粗略的位置 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
@@ -32,11 +23,15 @@
         android:supportsRtl="true"
         android:theme="@style/CommonAppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Activity.ArticlActivity"></activity>
+
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="64c5abe56ac8b3712d75b94652589404"/>
+            android:value="64c5abe56ac8b3712d75b94652589404" />
+
         <service android:name="com.amap.api.location.APSService" />
-        <activity android:name=".datails.Datails"></activity>
+
+        <activity android:name=".datails.Datails" />
         <activity android:name=".LoginSystemActivity.APPstar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
